--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^29.3.4",
+    "ag-grid-react": "^29.3.4",
+    "bootstrap": "^5.3.0-alpha3",
+    "chart.js": "^4.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-loading": "^2.0.3",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "author": {
+    "name": "Alisha",
+    "email": "n11374420@qut.edu.au"
   }
 }
