--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ag-grid-react": "^29.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
