--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-community": "^29.3.4",
+    "ag-grid-enterprise": "^33.3.0",
     "ag-grid-react": "^29.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "chart.js": "^4.3.0",
